--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">Anouar Tadlaoui <span class="text-primary">Mouenis</span></h1>
-                    <div class="subheading mb-5">Tétouan - Morocco · Phone : (212) 673-48192 · <a href="mailto:tadlaouimouenis@gmail.com">tadlaouimouenis@gmail.com</a></div>
+                    <div class="subheading mb-5">Tétouan - Morocco · Phone : (+212) 673-449-182 · <a href="mailto:tadlaouimouenis@gmail.com">tadlaouimouenis@gmail.com</a></div>
                     <p class="lead mb-5">
                     Is a PhD Research Scholar in Computer sciences, at the Laboratory of Informatics, Research Operational and Statistic Applied (LIROSA) at Faculty of Sciences, Abdelmalek Essaadi University. His dissertation research, focus on managing the learner model in Adaptive Hypermedia systems based on Bayesian methods and artificial intelligence. Mouenis Have a Master's degree in Instructional design Multimedia engineering, and a BSc in Web development from Abdelmalek Essaadi University in 2013 & 2011. He has produced several technical outputs, including Books, papers, book chapters, technical presentations, among others in the field of Computer Sciences. In research, his current interests include: Learner Modeling, Adaptive Web,Artificial Intelligence, Bayesian Networks and Machine learning.
                     </p>
@@ -181,7 +181,7 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Interests-->
+            <!-- Projects-->
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Projects</h2>
@@ -202,7 +202,7 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Awards-->
+            <!-- Publications-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Publications</h2>
